<resources>
   <string name="app_name">PAMO Health</string>

   <string name="main_menu">Main</string>

   <string name="get_receip">Food Recommendation</string>
   <string name="quiz">Quiz</string>

   <string name="bmi_calculator">BMI calculator</string>
   <string name="calories_calculator">Calories calculator</string>
   <string name="bim_name">BMI Calculator</string>

   <string name="enter_weight">Body weight</string>
   <string name="enter_height">Body height</string>
   <string name="bmi">Your BMI</string>

   <string name="female_btn">Female</string>
   <string name="male_btn">Male</string>
   <string name="calculate_calories_btn">Calculate</string>
   <string name="weight_hint">Your Weight (Kilograms)</string>
   <string name="height_hint">Your Height (Meters)</string>
   <string name="age_hint">Your Age (Years)</string>

   <string name="title_quiz">Balanced Diet Quiz</string>
   <string name="quiz_question_label">Question:</string>
   <string name="score_label">Score:</string>
   <string name="restart">Restart</string>
   <string name="end">End of quiz</string>
   <string name="good_answer">Good answer</string>
   <string name="correct_answer">Correct answer:</string>

   <string name="question_1">Why do we need to eat a balanced diet?</string>
   <string name="question_1_ans1">To give us energy</string>
   <string name="question_1_ans2">In oder for our bodies to function properly</string>
   <string name="question_1_ans3">To help us grow</string>
   <string name="question_1_ans4">To prevent us getting fat</string>

   <string name="question_2">Malnutrition means</string>
   <string name="question_2_ans1">A person is not eating properly</string>
   <string name="question_2_ans2">May mean undernutrition or overnutrition</string>
   <string name="question_2_ans3">Someone is starved</string>
   <string name="question_2_ans4">Somone is eating too much hours</string>

   <string name="question_3">If somone is deficient in a nutrient it means</string>
   <string name="question_3_ans1">They do not eat enough vitamins</string>
   <string name="question_3_ans2">They do not like nuts</string>
   <string name="question_3_ans3">They are not eating enough of a nutrient</string>
   <string name="question_3_ans4">They are not getting their 5 a day</string>

   <string name="question_4">Which of the following is NOT a dairy product?</string>
   <string name="question_4_ans1">Milk</string>
   <string name="question_4_ans2">Yoghurt</string>
   <string name="question_4_ans3">Fromage frais</string>
   <string name="question_4_ans4">Veal</string>

   <string name="question_5">Fruit and vegetables are important because</string>
   <string name="question_5_ans1">They give you energy</string>
   <string name="question_5_ans2">They provide you vitamins, minerals and nutrients</string>
   <string name="question_5_ans3">They are colourful</string>
   <string name="question_5_ans4">They are easily available</string>

   <string name="question_6">Foods containing starch and carbohydrates are important because</string>
   <string name="question_6_ans1">They help you grow</string>
   <string name="question_6_ans2">They stop you getting overweight</string>
   <string name="question_6_ans3">They are easy to cook</string>
   <string name="question_6_ans4">They give you energy and fill you up</string>

   <string name="question_7">Meat, fish and other alternatives provide the following important nutrient</string>
   <string name="question_7_ans1">Carbohydrate</string>
   <string name="question_7_ans2">Protein</string>
   <string name="question_7_ans3">Sugar</string>
   <string name="question_7_ans4">Fibre</string>


   <!-- Default values to xml layout-->
   <string name="_00">00</string>
   <string name="answer_1">Answer 1</string>
   <string name="answer_2">Answer 2</string>
   <string name="answer_3">Answer 3</string>
   <string name="answer_4">Answer 4</string>
   <string name="x_of_y">x/y</string>
   <string name="test_question">Test question</string>
   <string name="bmi_add_data_point">test</string>
   <string name="add_to_chart">Add to chart</string>
</resources>
