<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/weightEditText"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:digits="0123456789"
        android:ems="15"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weightTextView"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:background="@color/text_fields"
        android:elevation="@dimen/elevation"
        android:hint="@string/enter_weight"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/weightEditText"
        tools:layout_editor_absoluteX="12dp" />

    <EditText
        android:id="@+id/heightEditText"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/weightTextView"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/heightTextView"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="28dp"
        android:background="@color/text_fields"
        android:elevation="@dimen/elevation"
        android:hint="@string/enter_height"
        android:padding="@dimen/textview_padding"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/weightTextView"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/bmiTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/bmi_calculator"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightTextView"
        tools:ignore="MissingConstraints" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/barchart"
        android:layout_width="337dp"
        android:layout_height="317dp"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginTop="20dp"
        android:text="@string/bmi_add_data_point"
        app:layout_constraintBottom_toTopOf="@+id/backToMainMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBmiAddDataPoint"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonBmiAddDataPoint"
        android:layout_width="125dp"
        android:layout_height="42dp"
        android:layout_marginTop="80dp"
        android:text="@string/add_to_chart"
        app:layout_constraintBottom_toTopOf="@+id/barchart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/bmiTextView"
        app:layout_constraintTop_toBottomOf="@+id/heightEditText" />

    <Button
        android:id="@+id/backToMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_marginStart="160dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/hearth_color"
        android:text="@string/main_menu"
        android:textColor="#212121"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barchart"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>